Stoped ascii art from wrapping at smaller screen sizes.

--- a/index.css
+++ b/index.css
@@ -262,6 +262,7 @@ footer p {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  white-space: nowrap;
 }
 
 .uninteractable {
